--- a/src/Button.scss
+++ b/src/Button.scss
@@ -4,6 +4,8 @@ $button-text-color: #fff;
 $baby-blue: #f8faff;
 
 .bubbly-button{
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-family: 'Helvetica', 'Arial', sans-serif;
   display: inline-block;
   font-size: 1em;
