--- a/src/Dropdown/style.scss
+++ b/src/Dropdown/style.scss
@@ -1,11 +1,16 @@
 .dropdown {
+  margin-left: 20px;
   position: relative;
-  width: 230px;
+  width: 130px;
   filter: url(#goo);
+  color: #ffffff;
+  font-size: 1em;
+  font-weight: 600;
+  font-family: "Helvetica", "Arial", sans-serif;
 
   &__face,
   &__items {
-    background-color: #fff;
+    background-color: #ff0081;
     padding: 20px;
     border-radius: 25px;
   }
@@ -32,7 +37,7 @@
 
     &::before {
       content: "";
-      background-color: #fff;
+      background-color: #ff0081;
       position: absolute;
       bottom: 100%;
       right: 20%;
@@ -42,8 +47,8 @@
   }
 
   &__arrow {
-    border-bottom: 2px solid #000;
-    border-right: 2px solid #000;
+    border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
     position: absolute;
     top: 50%;
     right: 30px;
@@ -62,15 +67,10 @@
       opacity: 1;
     }
   }
-}
 
-body {
-  background-image: linear-gradient(140deg, #e2e2e2, #cdcdcd);
-  display: grid;
-  place-items: center;
-  font-family: "Lato", Arial, sans-serif;
-  height: 100vh;
-  margin: 0;
+  .dropdown__item {
+    cursor: pointer;
+  }
 }
 
 * {
