--- a/src/App.scss
+++ b/src/App.scss
@@ -98,6 +98,15 @@ body {
 }
 
 .question {
+    flex-direction: column;
+
+    .title {
+
+    }
+
+    .description {
+        padding: 20px 0;
+    }
 }
 
 .question-shake {
@@ -126,35 +135,5 @@ body {
     }
     40%, 100% {
         transform: rotateZ(0);
-    }
-}
-
-.dropdown {
-    align-self: flex-start;
-    margin-bottom: 70px;
-}
-
-.input-menu {
-    display: flex;
-}
-
-.question-quantity {
-    margin-left: 10px;
-    position: relative;
-    width: 130px;
-    height: 56px;
-    filter: url(#goo);
-    color: #ffffff;
-    font-size: 1em;
-    font-weight: 600;
-    font-family: "Helvetica", "Arial", sans-serif;
-
-    background-color: #ff0081;
-    padding: 20px;
-    border-radius: 25px;
-    border: none;
-
-    &:focus,&:focus-visible {
-        outline: none;
     }
 }
